# cpp-bitsy

./: CMakeLists.txt  game.bitsy
include/: BitsyGame.h  BitsyGameData.h  BitsyGameParser.h
src/: BitsyGame.cpp  BitsyGameData.cpp  BitsyGameParser.cpp  main.cpp
tests/: test_bitsy_game.cpp
